@@ -109,7 +109,8 @@ Current
 	- Modules: Added chanserv/op, chanserv/voice, chanserv/protect, chanserv/halfop, and chanserv/owner
 	- API: added flag +L for viewing channel access list
 	- API: added in_group
-	- Modules: Added to nickserv/set: set accountname and no status
+	- Modules: Added to nickserv/set: set accountname and nostatus
 	- API: extended is_register to channels
 	- Modules: added memoserv/main
 	- Modules: added chanserv/set
+	- Modules: Added to nickset/set: set noexpire
